// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logos <AuthereumLogo> matches snapshot 1`] = `
<DocumentFragment>
  <svg
    class="block w-auto h-[36px]"
    version="1.1"
    viewBox="0 0 382 472"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <g
      fill="none"
      fill-rule="evenodd"
      stroke="none"
      stroke-width="1"
    >
      <g
        fill="#FF4C2F"
        id="authereum"
      >
        <g
          transform="translate(190.950000, 235.900000) scale(-1, 1) rotate(-180.000000) translate(-190.950000, -235.900000) translate(-0.000000, 0.100000)"
        >
          <path
            d="M80,454.1 C50,444.5 19.8,434.9 12.7,432.7 L0,428.6 L0,340.4 C0,287.6 0.4,247.8 1,241.2 C5.4,195 25.4,151.2 58.8,114.8 C66.4,106.5 187,1.4 190.4,0.1 C191.8,-0.4 297.8,90 315.2,106.6 C345.4,135.3 369,177.3 377.4,217.5 C381.8,238.7 382.1,246.6 381.8,340.6 L381.5,429 L313.6,450.4 C276.3,462.1 245.6,471.6 245.4,471.5 C245.3,471.3 250.9,460.2 258,446.7 L270.9,422.2 L290.2,416 C300.8,412.6 316.8,407.5 325.8,404.7 L342.1,399.6 L341.7,318.4 C341.4,240.4 341.3,236.8 339.3,227.7 C331.7,193.4 316,164.3 291.9,139.7 C287.3,135 263.9,114.3 240,93.8 C216.1,73.2 195.3,55.3 193.8,53.9 L191.2,51.5 L145.3,91 C89.2,139.4 80.8,147.6 67.4,168.2 C57.1,184.1 49.5,201.2 44.9,218.9 C40.4,236.9 40,243.6 40,323.8 L40,399.5 L54.3,404 C62.1,406.5 78.1,411.6 89.8,415.3 C101.4,419 111,422.4 111,422.7 C111,423 116.6,434 123.5,447.1 C130.4,460.3 136,471.2 136,471.4 C136,472 134.8,471.6 80,454.1 Z"
          />
          <path
            d="M188.4,468.5 C187.5,466.7 162.3,418.6 132.5,361.7 L78.3,258.2 L79.1,249.8 C80.9,232.6 87.3,214.4 97.7,197.9 C101.4,191.9 102.5,190.8 103.5,191.9 C104.1,192.6 123.9,230 147.5,275 C171,319.9 190.5,356.7 190.9,356.7 C191.2,356.7 211,320.3 234.8,275.9 C258.6,231.5 278.5,194.4 279.1,193.4 C280.1,191.7 280.3,191.8 281.9,193.9 C292.2,207.4 300.7,229.7 303.1,249.4 L304.3,259.4 L247.5,365.3 C216.3,423.5 190.6,471.4 190.4,471.5 C190.3,471.7 189.4,470.4 188.4,468.5 Z"
          />
          <path
            d="M163,213.8 L135.5,158.9 L151,145.4 C159.5,138 172,127.3 178.7,121.7 L191,111.5 L193.7,113.7 C195.3,114.9 207.6,125.6 221.1,137.5 L245.8,159.1 L218.4,213.9 C203.3,244 190.9,268.7 190.7,268.7 C190.6,268.7 178.1,244 163,213.8 Z"
          />
        </g>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Logos <BraveLogo> matches snapshot 1`] = `
<DocumentFragment>
  <svg
    class="block w-full h-[36px]"
    version="1.1"
    viewBox="0 0 218 256"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <lineargradient
        id="linearGradient-1"
        x1="0%"
        x2="100%"
        y1="50.7055163%"
        y2="50.7055163%"
      >
        <stop
          offset="0%"
          stop-color="#FF5500"
        />
        <stop
          offset="40.9877232%"
          stop-color="#FF5500"
        />
        <stop
          offset="58.1981215%"
          stop-color="#FF2000"
        />
        <stop
          offset="100%"
          stop-color="#FF2000"
        />
      </lineargradient>
      <lineargradient
        id="linearGradient-2"
        x1="2.1484375%"
        x2="100%"
        y1="50.7055163%"
        y2="50.7055163%"
      >
        <stop
          offset="0%"
          stop-color="#FF452A"
        />
        <stop
          offset="100%"
          stop-color="#FF2000"
        />
      </lineargradient>
      <path
        d="M170.272109,25.3359387 L147.968109,0.00010893617 L108.800109,0.00010893617 L69.6321088,0.00010893617 L47.3281088,25.3359387 C47.3281088,25.3359387 27.7441088,19.8891302 18.4961088,29.1487047 C18.4961088,29.1487047 44.6081088,26.7886026 53.5841088,41.4040238 C53.5841088,41.4040238 77.7921088,46.0338111 81.0561088,46.0338111 C84.3201088,46.0338111 91.3921088,43.3104068 97.9201088,41.1316834 C104.448109,38.95296 108.800109,38.9371643 108.800109,38.9371643 C108.800109,38.9371643 113.152109,38.95296 119.680109,41.1316834 C126.208109,43.3104068 133.280109,46.0338111 136.544109,46.0338111 C139.808109,46.0338111 164.016109,41.4040238 164.016109,41.4040238 C172.992109,26.7886026 199.104109,29.1487047 199.104109,29.1487047 C189.856109,19.8891302 170.272109,25.3359387 170.272109,25.3359387"
        id="path-3"
      />
    </defs>
    <g
      fill="none"
      fill-rule="evenodd"
      id="starting-collection"
      stroke="none"
      stroke-width="1"
    >
      <g
        id="Build-Icons"
        transform="translate(-70.000000, -350.000000)"
      >
        <g
          id="build-icons/Stable"
          transform="translate(50.000000, 350.000000)"
        >
          <g
            id="Logo"
            transform="translate(20.114286, 0.000000)"
          >
            <path
              d="M209.984109,61.2848749 L215.968109,46.5784919 C215.968109,46.5784919 208.352109,38.4082791 199.104109,29.1487047 C189.856109,19.8891302 170.272109,25.3359387 170.272109,25.3359387 L147.968109,0.00010893617 L108.800109,0.00010893617 L69.6321088,0.00010893617 L47.3281088,25.3359387 C47.3281088,25.3359387 27.7441088,19.8891302 18.4961088,29.1487047 C9.2481088,38.4082791 1.6321088,46.5784919 1.6321088,46.5784919 L7.6161088,61.2848749 L0.0001088,83.0721089 C0.0001088,83.0721089 22.3993088,168.017811 25.0241088,178.391258 C30.1921088,198.81679 33.7281088,206.714662 48.4161088,217.063598 C63.1041088,227.412534 89.7601088,245.387003 94.1121088,248.110407 C98.4641088,250.833811 103.904109,255.472858 108.800109,255.472858 C113.696109,255.472858 119.136109,250.833811 123.488109,248.110407 C127.840109,245.387003 154.496109,227.412534 169.184109,217.063598 C183.872109,206.714662 187.408109,198.81679 192.576109,178.391258 C195.200365,168.017811 217.600109,83.0721089 217.600109,83.0721089 L209.984109,61.2848749 Z"
              fill="url(#linearGradient-1)"
              id="Head"
            />
            <path
              d="M164.016109,41.4040238 C164.016109,41.4040238 192.704493,76.1274281 192.704493,83.5487047 C192.704493,90.9699813 189.095597,92.9286536 185.467117,96.7866281 C181.838637,100.644603 165.991373,117.49376 163.956269,119.657232 C161.921165,121.821249 157.684493,125.101862 160.176557,131.006747 C162.668621,136.911632 166.344973,144.425505 162.256813,152.046679 C158.168109,159.667854 151.164109,164.754628 146.676109,163.913641 C142.188109,163.072109 131.648109,157.557215 127.772109,155.038066 C123.896109,152.518917 111.611501,142.374781 111.611501,138.493386 C111.611501,134.612534 124.310093,127.643888 126.655821,126.0605 C129.002637,124.477658 139.703117,118.349454 139.922349,115.944143 C140.141037,113.538288 140.057805,112.832926 136.899885,106.889369 C133.741965,100.945266 128.054989,93.0136238 129.001549,87.7362111 C129.948109,82.459343 139.119949,79.7152409 145.665357,77.2402111 C152.209677,74.765726 164.811437,70.0918196 166.385229,69.3652153 C167.960109,68.6380664 167.553197,67.945777 162.783949,67.4931472 C158.015789,67.0405174 144.483245,65.2419813 138.382285,66.9446536 C132.281325,68.647326 121.858285,71.2378281 121.013997,72.6115132 C120.169709,73.9851983 119.424973,74.0314962 120.292109,78.7702196 C121.158701,83.508943 125.622765,106.24719 126.055789,110.285998 C126.489357,114.324807 127.336909,116.994832 122.987629,117.990509 C118.637805,118.986186 111.316109,120.715003 108.800109,120.715003 C106.284109,120.715003 98.9618688,118.986186 94.6125888,117.990509 C90.2627648,116.994832 91.1103168,114.324807 91.5438848,110.285998 C91.9774528,106.24719 96.4409728,83.508943 97.3081088,78.7702196 C98.1747008,74.0314962 97.4299648,73.9851983 96.5862208,72.6115132 C95.7419328,71.2378281 85.3183488,68.647326 79.2173888,66.9446536 C73.1164288,65.2419813 59.5844288,67.0405174 54.8157248,67.4931472 C50.0470208,67.945777 49.6401088,68.6380664 51.2144448,69.3652153 C52.7887808,70.0918196 65.3905408,74.765726 71.9348608,77.2402111 C78.4797248,79.7152409 87.6521088,82.459343 88.5986688,87.7362111 C89.5452288,93.0136238 83.8577088,100.945266 80.7003328,106.889369 C77.5424128,112.832926 77.4586368,113.538288 77.6778688,115.944143 C77.8965568,118.349454 88.5975808,124.477658 90.9438528,126.0605 C93.2901248,127.643888 105.988173,134.612534 105.988173,138.493386 C105.988173,142.374781 93.7041088,152.518917 89.8281088,155.038066 C85.9521088,157.557215 75.4121088,163.072109 70.9241088,163.913641 C66.4361088,164.754628 59.4321088,159.667854 55.3434048,152.046679 C51.2552448,144.425505 54.9315968,136.911632 57.4231168,131.006747 C59.9151808,125.101862 55.6790528,121.821249 53.6434048,119.657232 C51.6088448,117.49376 35.7610368,100.644603 32.1325568,96.7866281 C28.5040768,92.9286536 24.8957248,90.9699813 24.8957248,83.5487047 C24.8957248,76.1274281 53.5841088,41.4040238 53.5841088,41.4040238 C53.5841088,41.4040238 77.7921088,46.0338111 81.0561088,46.0338111 C84.3201088,46.0338111 91.3921088,43.3104068 97.9201088,41.1316834 C104.448109,38.95296 108.800109,38.9371643 108.800109,38.9371643 C108.800109,38.9371643 113.152109,38.95296 119.680109,41.1316834 C126.208109,43.3104068 133.280109,46.0338111 136.544109,46.0338111 C139.808109,46.0338111 164.016109,41.4040238 164.016109,41.4040238 Z M142.509504,174.227935 C144.28512,175.341263 143.202016,177.439918 141.584704,178.584837 C139.966848,179.729757 118.228064,196.584361 116.118432,198.447169 C114.008256,200.310523 110.908,203.387425 108.8,203.387425 C106.692,203.387425 103.5912,200.310523 101.481568,198.447169 C99.371392,196.584361 77.633152,179.729757 76.015296,178.584837 C74.39744,177.439918 73.31488,175.341263 75.090496,174.227935 C76.866656,173.115152 82.422528,170.306233 90.08912,166.333876 C97.754624,162.362063 107.308896,158.985042 108.8,158.985042 C110.291104,158.985042 119.844832,162.362063 127.511424,166.333876 C135.177472,170.306233 140.733344,173.115152 142.509504,174.227935 Z"
              fill="#FFFFFF"
              id="Face"
            />
            <mask
              fill="white"
              id="mask-4"
            >
              <use
                xlink:href="#path-3"
              />
            </mask>
            <use
              fill="url(#linearGradient-2)"
              id="Top-Head"
              xlink:href="#path-3"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Logos <CoinbaseWalletLogo> matches snapshot 1`] = `
<DocumentFragment>
  <svg
    class="block w-[36px] h-[36px] overflow-hidden rounded"
    fill="none"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#0052FF"
      height="1024"
      width="1024"
    />
    <path
      clip-rule="evenodd"
      d="M152 512C152 710.823 313.177 872 512 872C710.823 872 872 710.823 872 512C872 313.177 710.823 152 512 152C313.177 152 152 313.177 152 512ZM420 396C406.745 396 396 406.745 396 420V604C396 617.255 406.745 628 420 628H604C617.255 628 628 617.255 628 604V420C628 406.745 617.255 396 604 396H420Z"
      fill="white"
      fill-rule="evenodd"
    />
  </svg>
</DocumentFragment>
`;

exports[`Logos <FortmaticLogo> matches snapshot 1`] = `
<DocumentFragment>
  <svg
    class="block w-[36px] h-[36px]"
    fill="none"
    viewBox="0 0 63 63"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="m31.6393.984375h15.3274 15.3275v15.299025h-15.3275-15.3274-15.3275v15.2989.981 14.2289.0891 15.2099h-15.327425v-15.2099-.0891-14.2289-.981-15.2989-15.299025h15.327425zm15.3274 45.808325h-15.2381v-15.2098h30.5566v15.7449c0 3.914-1.5571 7.668-4.3291 10.4365s-6.5319 4.325-10.4533 4.3274h-.5361z"
      fill="#617bff"
      fill-rule="evenodd"
    />
  </svg>
</DocumentFragment>
`;

exports[`Logos <MetaMaskLogo> matches snapshot 1`] = `
<DocumentFragment>
  <svg
    class="block w-[36px] h-[36px]"
    version="1.1"
    viewBox="0 0 318.6 318.6"
    xml:space="preserve"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <style
      type="text/css"
    >
      .st0{fill:#E2761B;stroke:#E2761B;stroke-linecap:round;stroke-linejoin:round;}
      .st1{fill:#E4761B;stroke:#E4761B;stroke-linecap:round;stroke-linejoin:round;}
      .st2{fill:#D7C1B3;stroke:#D7C1B3;stroke-linecap:round;stroke-linejoin:round;}
      .st3{fill:#233447;stroke:#233447;stroke-linecap:round;stroke-linejoin:round;}
      .st4{fill:#CD6116;stroke:#CD6116;stroke-linecap:round;stroke-linejoin:round;}
      .st5{fill:#E4751F;stroke:#E4751F;stroke-linecap:round;stroke-linejoin:round;}
      .st6{fill:#F6851B;stroke:#F6851B;stroke-linecap:round;stroke-linejoin:round;}
      .st7{fill:#C0AD9E;stroke:#C0AD9E;stroke-linecap:round;stroke-linejoin:round;}
      .st8{fill:#161616;stroke:#161616;stroke-linecap:round;stroke-linejoin:round;}
      .st9{fill:#763D16;stroke:#763D16;stroke-linecap:round;stroke-linejoin:round;}
    </style>
    <polygon
      class="st0"
      points="274.1,35.5 174.6,109.4 193,65.8 "
    />
    <g>
      <polygon
        class="st1"
        points="44.4,35.5 143.1,110.1 125.6,65.8  "
      />
      <polygon
        class="st1"
        points="238.3,206.8 211.8,247.4 268.5,263 284.8,207.7  "
      />
      <polygon
        class="st1"
        points="33.9,207.7 50.1,263 106.8,247.4 80.3,206.8  "
      />
      <polygon
        class="st1"
        points="103.6,138.2 87.8,162.1 144.1,164.6 142.1,104.1  "
      />
      <polygon
        class="st1"
        points="214.9,138.2 175.9,103.4 174.6,164.6 230.8,162.1  "
      />
      <polygon
        class="st1"
        points="106.8,247.4 140.6,230.9 111.4,208.1  "
      />
      <polygon
        class="st1"
        points="177.9,230.9 211.8,247.4 207.1,208.1  "
      />
    </g>
    <g>
      <polygon
        class="st2"
        points="211.8,247.4 177.9,230.9 180.6,253 180.3,262.3  "
      />
      <polygon
        class="st2"
        points="106.8,247.4 138.3,262.3 138.1,253 140.6,230.9  "
      />
    </g>
    <polygon
      class="st3"
      points="138.8,193.5 110.6,185.2 130.5,176.1 "
    />
    <polygon
      class="st3"
      points="179.7,193.5 188,176.1 208,185.2 "
    />
    <g>
      <polygon
        class="st4"
        points="106.8,247.4 111.6,206.8 80.3,207.7  "
      />
      <polygon
        class="st4"
        points="207,206.8 211.8,247.4 238.3,207.7  "
      />
      <polygon
        class="st4"
        points="230.8,162.1 174.6,164.6 179.8,193.5 188.1,176.1 208.1,185.2  "
      />
      <polygon
        class="st4"
        points="110.6,185.2 130.6,176.1 138.8,193.5 144.1,164.6 87.8,162.1  "
      />
    </g>
    <g>
      <polygon
        class="st5"
        points="87.8,162.1 111.4,208.1 110.6,185.2  "
      />
      <polygon
        class="st5"
        points="208.1,185.2 207.1,208.1 230.8,162.1  "
      />
      <polygon
        class="st5"
        points="144.1,164.6 138.8,193.5 145.4,227.6 146.9,182.7  "
      />
      <polygon
        class="st5"
        points="174.6,164.6 171.9,182.6 173.1,227.6 179.8,193.5  "
      />
    </g>
    <polygon
      class="st6"
      points="179.8,193.5 173.1,227.6 177.9,230.9 207.1,208.1 208.1,185.2 "
    />
    <polygon
      class="st6"
      points="110.6,185.2 111.4,208.1 140.6,230.9 145.4,227.6 138.8,193.5 "
    />
    <polygon
      class="st7"
      points="180.3,262.3 180.6,253 178.1,250.8 140.4,250.8 138.1,253 138.3,262.3 106.8,247.4 117.8,256.4   140.1,271.9 178.4,271.9 200.8,256.4 211.8,247.4 "
    />
    <polygon
      class="st8"
      points="177.9,230.9 173.1,227.6 145.4,227.6 140.6,230.9 138.1,253 140.4,250.8 178.1,250.8 180.6,253 "
    />
    <g>
      <polygon
        class="st9"
        points="278.3,114.2 286.8,73.4 274.1,35.5 177.9,106.9 214.9,138.2 267.2,153.5 278.8,140 273.8,136.4    281.8,129.1 275.6,124.3 283.6,118.2  "
      />
      <polygon
        class="st9"
        points="31.8,73.4 40.3,114.2 34.9,118.2 42.9,124.3 36.8,129.1 44.8,136.4 39.8,140 51.3,153.5 103.6,138.2    140.6,106.9 44.4,35.5  "
      />
    </g>
    <polygon
      class="st6"
      points="267.2,153.5 214.9,138.2 230.8,162.1 207.1,208.1 238.3,207.7 284.8,207.7 "
    />
    <polygon
      class="st6"
      points="103.6,138.2 51.3,153.5 33.9,207.7 80.3,207.7 111.4,208.1 87.8,162.1 "
    />
    <polygon
      class="st6"
      points="174.6,164.6 177.9,106.9 193.1,65.8 125.6,65.8 140.6,106.9 144.1,164.6 145.3,182.8 145.4,227.6   173.1,227.6 173.3,182.8 "
    />
  </svg>
</DocumentFragment>
`;

exports[`Logos <OperaLogo> matches snapshot 1`] = `
<DocumentFragment>
  <svg
    class="block w-[36px] h-auto"
    viewBox="0 0 81 80"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M.71 0H68v79.8H.71z"
        id="a"
      />
      <path
        d="M40.61 0C18.573 0 .71 17.863.71 39.902c0 21.399 16.845 38.86 37.997 39.852.633.031 1.266.047 1.902.047 10.215 0 19.532-3.84 26.59-10.153-4.676 3.102-10.144 4.887-15.988 4.887-9.5 0-18.012-4.715-23.734-12.148-4.41-5.207-7.27-12.907-7.465-21.547v-1.88c.195-8.64 3.054-16.339 7.465-21.546C33.199 9.984 41.71 5.27 51.21 5.27c5.844 0 11.316 1.785 15.992 4.886C60.18 3.875 50.918.04 40.762.004 40.71.004 40.66 0 40.609 0z"
        id="c"
      />
      <lineargradient
        id="d"
        x1="49.999%"
        x2="49.999%"
        y1="0%"
        y2="100%"
      >
        <stop
          offset="0%"
          stop-color="#FF1B2D"
        />
        <stop
          offset="25%"
          stop-color="#FF1B2D"
        />
        <stop
          offset="31.25%"
          stop-color="#FF1B2D"
        />
        <stop
          offset="34.375%"
          stop-color="#FF1B2D"
        />
        <stop
          offset="37.5%"
          stop-color="#FE1B2D"
        />
        <stop
          offset="39.063%"
          stop-color="#FD1A2D"
        />
        <stop
          offset="40.625%"
          stop-color="#FD1A2C"
        />
        <stop
          offset="42.188%"
          stop-color="#FC1A2C"
        />
        <stop
          offset="43.75%"
          stop-color="#FB1A2C"
        />
        <stop
          offset="44.531%"
          stop-color="#FA1A2C"
        />
        <stop
          offset="45.313%"
          stop-color="#FA192C"
        />
        <stop
          offset="46.094%"
          stop-color="#F9192B"
        />
        <stop
          offset="46.875%"
          stop-color="#F9192B"
        />
        <stop
          offset="47.656%"
          stop-color="#F8192B"
        />
        <stop
          offset="48.438%"
          stop-color="#F8192B"
        />
        <stop
          offset="49.219%"
          stop-color="#F7192B"
        />
        <stop
          offset="50%"
          stop-color="#F6182B"
        />
        <stop
          offset="50.781%"
          stop-color="#F6182A"
        />
        <stop
          offset="51.563%"
          stop-color="#F5182A"
        />
        <stop
          offset="52.344%"
          stop-color="#F4182A"
        />
        <stop
          offset="53.125%"
          stop-color="#F4172A"
        />
        <stop
          offset="53.906%"
          stop-color="#F3172A"
        />
        <stop
          offset="54.688%"
          stop-color="#F21729"
        />
        <stop
          offset="55.469%"
          stop-color="#F11729"
        />
        <stop
          offset="56.25%"
          stop-color="#F01729"
        />
        <stop
          offset="57.031%"
          stop-color="#F01629"
        />
        <stop
          offset="57.813%"
          stop-color="#EF1628"
        />
        <stop
          offset="58.594%"
          stop-color="#EE1628"
        />
        <stop
          offset="59.375%"
          stop-color="#ED1528"
        />
        <stop
          offset="60.156%"
          stop-color="#EC1528"
        />
        <stop
          offset="60.938%"
          stop-color="#EB1527"
        />
        <stop
          offset="61.719%"
          stop-color="#EA1527"
        />
        <stop
          offset="62.5%"
          stop-color="#E91427"
        />
        <stop
          offset="62.891%"
          stop-color="#E81427"
        />
        <stop
          offset="63.281%"
          stop-color="#E81426"
        />
        <stop
          offset="63.672%"
          stop-color="#E71426"
        />
        <stop
          offset="64.063%"
          stop-color="#E71426"
        />
        <stop
          offset="64.453%"
          stop-color="#E61326"
        />
        <stop
          offset="64.844%"
          stop-color="#E61326"
        />
        <stop
          offset="65.234%"
          stop-color="#E51326"
        />
        <stop
          offset="65.625%"
          stop-color="#E51326"
        />
        <stop
          offset="66.016%"
          stop-color="#E41325"
        />
        <stop
          offset="66.406%"
          stop-color="#E41325"
        />
        <stop
          offset="66.797%"
          stop-color="#E31225"
        />
        <stop
          offset="67.188%"
          stop-color="#E21225"
        />
        <stop
          offset="67.578%"
          stop-color="#E21225"
        />
        <stop
          offset="67.969%"
          stop-color="#E11225"
        />
        <stop
          offset="68.359%"
          stop-color="#E11224"
        />
        <stop
          offset="68.75%"
          stop-color="#E01224"
        />
        <stop
          offset="69.141%"
          stop-color="#E01124"
        />
        <stop
          offset="69.531%"
          stop-color="#DF1124"
        />
        <stop
          offset="69.922%"
          stop-color="#DE1124"
        />
        <stop
          offset="70.313%"
          stop-color="#DE1124"
        />
        <stop
          offset="70.703%"
          stop-color="#DD1123"
        />
        <stop
          offset="71.094%"
          stop-color="#DD1023"
        />
        <stop
          offset="71.484%"
          stop-color="#DC1023"
        />
        <stop
          offset="71.875%"
          stop-color="#DB1023"
        />
        <stop
          offset="72.266%"
          stop-color="#DB1023"
        />
        <stop
          offset="72.656%"
          stop-color="#DA1023"
        />
        <stop
          offset="73.047%"
          stop-color="#DA1022"
        />
        <stop
          offset="73.438%"
          stop-color="#D90F22"
        />
        <stop
          offset="73.828%"
          stop-color="#D80F22"
        />
        <stop
          offset="74.219%"
          stop-color="#D80F22"
        />
        <stop
          offset="74.609%"
          stop-color="#D70F22"
        />
        <stop
          offset="75%"
          stop-color="#D60F21"
        />
        <stop
          offset="75.391%"
          stop-color="#D60E21"
        />
        <stop
          offset="75.781%"
          stop-color="#D50E21"
        />
        <stop
          offset="76.172%"
          stop-color="#D40E21"
        />
        <stop
          offset="76.563%"
          stop-color="#D40E21"
        />
        <stop
          offset="76.953%"
          stop-color="#D30E21"
        />
        <stop
          offset="77.344%"
          stop-color="#D20D20"
        />
        <stop
          offset="77.734%"
          stop-color="#D20D20"
        />
        <stop
          offset="78.125%"
          stop-color="#D10D20"
        />
        <stop
          offset="78.516%"
          stop-color="#D00D20"
        />
        <stop
          offset="78.906%"
          stop-color="#D00C20"
        />
        <stop
          offset="79.297%"
          stop-color="#CF0C1F"
        />
        <stop
          offset="79.688%"
          stop-color="#CE0C1F"
        />
        <stop
          offset="80.078%"
          stop-color="#CE0C1F"
        />
        <stop
          offset="80.469%"
          stop-color="#CD0C1F"
        />
        <stop
          offset="80.859%"
          stop-color="#CC0B1F"
        />
        <stop
          offset="81.25%"
          stop-color="#CB0B1E"
        />
        <stop
          offset="81.641%"
          stop-color="#CB0B1E"
        />
        <stop
          offset="82.031%"
          stop-color="#CA0B1E"
        />
        <stop
          offset="82.422%"
          stop-color="#C90A1E"
        />
        <stop
          offset="82.813%"
          stop-color="#C80A1E"
        />
        <stop
          offset="83.203%"
          stop-color="#C80A1D"
        />
        <stop
          offset="83.594%"
          stop-color="#C70A1D"
        />
        <stop
          offset="83.984%"
          stop-color="#C60A1D"
        />
        <stop
          offset="84.375%"
          stop-color="#C5091D"
        />
        <stop
          offset="84.766%"
          stop-color="#C5091C"
        />
        <stop
          offset="85.156%"
          stop-color="#C4091C"
        />
        <stop
          offset="85.547%"
          stop-color="#C3091C"
        />
        <stop
          offset="85.938%"
          stop-color="#C2081C"
        />
        <stop
          offset="86.328%"
          stop-color="#C2081C"
        />
        <stop
          offset="86.719%"
          stop-color="#C1081B"
        />
        <stop
          offset="87.109%"
          stop-color="#C0081B"
        />
        <stop
          offset="87.5%"
          stop-color="#BF071B"
        />
        <stop
          offset="87.891%"
          stop-color="#BE071B"
        />
        <stop
          offset="88.281%"
          stop-color="#BE071A"
        />
        <stop
          offset="88.672%"
          stop-color="#BD071A"
        />
        <stop
          offset="89.063%"
          stop-color="#BC061A"
        />
        <stop
          offset="89.453%"
          stop-color="#BB061A"
        />
        <stop
          offset="89.844%"
          stop-color="#BA061A"
        />
        <stop
          offset="90.234%"
          stop-color="#BA0619"
        />
        <stop
          offset="90.625%"
          stop-color="#B90519"
        />
        <stop
          offset="91.016%"
          stop-color="#B80519"
        />
        <stop
          offset="91.406%"
          stop-color="#B70519"
        />
        <stop
          offset="91.797%"
          stop-color="#B60518"
        />
        <stop
          offset="92.188%"
          stop-color="#B50418"
        />
        <stop
          offset="92.578%"
          stop-color="#B50418"
        />
        <stop
          offset="92.969%"
          stop-color="#B40418"
        />
        <stop
          offset="93.359%"
          stop-color="#B30417"
        />
        <stop
          offset="93.75%"
          stop-color="#B20317"
        />
        <stop
          offset="94.141%"
          stop-color="#B10317"
        />
        <stop
          offset="94.531%"
          stop-color="#B00317"
        />
        <stop
          offset="94.922%"
          stop-color="#AF0316"
        />
        <stop
          offset="95.313%"
          stop-color="#AE0216"
        />
        <stop
          offset="95.703%"
          stop-color="#AE0216"
        />
        <stop
          offset="96.094%"
          stop-color="#AD0216"
        />
        <stop
          offset="96.484%"
          stop-color="#AC0115"
        />
        <stop
          offset="96.875%"
          stop-color="#AB0115"
        />
        <stop
          offset="97.266%"
          stop-color="#AA0115"
        />
        <stop
          offset="97.656%"
          stop-color="#A90115"
        />
        <stop
          offset="98.047%"
          stop-color="#A80014"
        />
        <stop
          offset="98.438%"
          stop-color="#A70014"
        />
        <stop
          offset="100%"
          stop-color="#A70014"
        />
      </lineargradient>
      <path
        d="M0 0h54v70H0z"
        id="f"
      />
      <path
        d="M.477 12.414c3.66-4.32 8.39-6.926 13.554-6.926 11.617 0 21.032 13.168 21.032 29.414 0 16.243-9.415 29.41-21.032 29.41-5.164 0-9.894-2.605-13.554-6.925C6.199 64.82 14.71 69.535 24.21 69.535c5.844 0 11.312-1.785 15.988-4.887 8.168-7.308 13.313-17.925 13.313-29.746 0-11.82-5.145-22.441-13.309-29.746C35.527 2.055 30.055.27 24.211.27 14.71.27 6.199 4.984.477 12.414"
        id="h"
      />
      <lineargradient
        id="i"
        x1="49.998%"
        x2="49.998%"
        y1="-.001%"
        y2="99.997%"
      >
        <stop
          offset="0%"
          stop-color="#9C0000"
        />
        <stop
          offset=".781%"
          stop-color="#9C0000"
        />
        <stop
          offset="1.172%"
          stop-color="#9D0000"
        />
        <stop
          offset="1.563%"
          stop-color="#9D0101"
        />
        <stop
          offset="1.953%"
          stop-color="#9E0101"
        />
        <stop
          offset="2.344%"
          stop-color="#9E0202"
        />
        <stop
          offset="2.734%"
          stop-color="#9F0202"
        />
        <stop
          offset="3.125%"
          stop-color="#9F0202"
        />
        <stop
          offset="3.516%"
          stop-color="#A00303"
        />
        <stop
          offset="3.906%"
          stop-color="#A00303"
        />
        <stop
          offset="4.297%"
          stop-color="#A10404"
        />
        <stop
          offset="4.688%"
          stop-color="#A10404"
        />
        <stop
          offset="5.078%"
          stop-color="#A20505"
        />
        <stop
          offset="5.469%"
          stop-color="#A30505"
        />
        <stop
          offset="5.859%"
          stop-color="#A30505"
        />
        <stop
          offset="6.25%"
          stop-color="#A40606"
        />
        <stop
          offset="6.641%"
          stop-color="#A40606"
        />
        <stop
          offset="7.031%"
          stop-color="#A50707"
        />
        <stop
          offset="7.422%"
          stop-color="#A50707"
        />
        <stop
          offset="7.813%"
          stop-color="#A60808"
        />
        <stop
          offset="8.203%"
          stop-color="#A70808"
        />
        <stop
          offset="8.594%"
          stop-color="#A70808"
        />
        <stop
          offset="8.984%"
          stop-color="#A80909"
        />
        <stop
          offset="9.375%"
          stop-color="#A80909"
        />
        <stop
          offset="9.766%"
          stop-color="#A90A0A"
        />
        <stop
          offset="10.156%"
          stop-color="#A90A0A"
        />
        <stop
          offset="10.547%"
          stop-color="#AA0B0B"
        />
        <stop
          offset="10.938%"
          stop-color="#AA0B0B"
        />
        <stop
          offset="11.328%"
          stop-color="#AB0B0B"
        />
        <stop
          offset="11.719%"
          stop-color="#AC0C0C"
        />
        <stop
          offset="12.109%"
          stop-color="#AC0C0C"
        />
        <stop
          offset="12.5%"
          stop-color="#AD0D0D"
        />
        <stop
          offset="12.891%"
          stop-color="#AD0D0D"
        />
        <stop
          offset="13.281%"
          stop-color="#AE0D0D"
        />
        <stop
          offset="13.672%"
          stop-color="#AE0E0E"
        />
        <stop
          offset="14.063%"
          stop-color="#AF0E0E"
        />
        <stop
          offset="14.453%"
          stop-color="#AF0F0F"
        />
        <stop
          offset="14.844%"
          stop-color="#B00F0F"
        />
        <stop
          offset="15.234%"
          stop-color="#B11010"
        />
        <stop
          offset="15.625%"
          stop-color="#B11010"
        />
        <stop
          offset="16.016%"
          stop-color="#B21010"
        />
        <stop
          offset="16.406%"
          stop-color="#B21111"
        />
        <stop
          offset="16.797%"
          stop-color="#B31111"
        />
        <stop
          offset="17.188%"
          stop-color="#B31212"
        />
        <stop
          offset="17.578%"
          stop-color="#B41212"
        />
        <stop
          offset="17.969%"
          stop-color="#B51313"
        />
        <stop
          offset="18.359%"
          stop-color="#B51313"
        />
        <stop
          offset="18.75%"
          stop-color="#B61313"
        />
        <stop
          offset="19.141%"
          stop-color="#B61414"
        />
        <stop
          offset="19.531%"
          stop-color="#B71414"
        />
        <stop
          offset="19.922%"
          stop-color="#B71515"
        />
        <stop
          offset="20.313%"
          stop-color="#B81515"
        />
        <stop
          offset="20.703%"
          stop-color="#B81616"
        />
        <stop
          offset="21.094%"
          stop-color="#B91616"
        />
        <stop
          offset="21.484%"
          stop-color="#BA1616"
        />
        <stop
          offset="21.875%"
          stop-color="#BA1717"
        />
        <stop
          offset="22.266%"
          stop-color="#BB1717"
        />
        <stop
          offset="22.656%"
          stop-color="#BB1818"
        />
        <stop
          offset="23.047%"
          stop-color="#BC1818"
        />
        <stop
          offset="23.438%"
          stop-color="#BC1919"
        />
        <stop
          offset="23.828%"
          stop-color="#BD1919"
        />
        <stop
          offset="24.219%"
          stop-color="#BD1919"
        />
        <stop
          offset="24.609%"
          stop-color="#BE1A1A"
        />
        <stop
          offset="25%"
          stop-color="#BF1A1A"
        />
        <stop
          offset="25.391%"
          stop-color="#BF1B1B"
        />
        <stop
          offset="25.781%"
          stop-color="#C01B1B"
        />
        <stop
          offset="26.172%"
          stop-color="#C01B1B"
        />
        <stop
          offset="26.563%"
          stop-color="#C11C1C"
        />
        <stop
          offset="26.953%"
          stop-color="#C11C1C"
        />
        <stop
          offset="27.344%"
          stop-color="#C21D1D"
        />
        <stop
          offset="27.734%"
          stop-color="#C21D1D"
        />
        <stop
          offset="28.125%"
          stop-color="#C31E1E"
        />
        <stop
          offset="28.516%"
          stop-color="#C41E1E"
        />
        <stop
          offset="28.906%"
          stop-color="#C41E1E"
        />
        <stop
          offset="29.297%"
          stop-color="#C51F1F"
        />
        <stop
          offset="29.688%"
          stop-color="#C51F1F"
        />
        <stop
          offset="30.078%"
          stop-color="#C62020"
        />
        <stop
          offset="30.469%"
          stop-color="#C62020"
        />
        <stop
          offset="30.859%"
          stop-color="#C72121"
        />
        <stop
          offset="31.25%"
          stop-color="#C82121"
        />
        <stop
          offset="31.641%"
          stop-color="#C82121"
        />
        <stop
          offset="32.031%"
          stop-color="#C92222"
        />
        <stop
          offset="32.422%"
          stop-color="#C92222"
        />
        <stop
          offset="32.813%"
          stop-color="#CA2323"
        />
        <stop
          offset="33.203%"
          stop-color="#CA2323"
        />
        <stop
          offset="33.594%"
          stop-color="#CB2424"
        />
        <stop
          offset="33.984%"
          stop-color="#CB2424"
        />
        <stop
          offset="34.375%"
          stop-color="#CC2424"
        />
        <stop
          offset="34.766%"
          stop-color="#CD2525"
        />
        <stop
          offset="35.156%"
          stop-color="#CD2525"
        />
        <stop
          offset="35.547%"
          stop-color="#CE2626"
        />
        <stop
          offset="35.938%"
          stop-color="#CE2626"
        />
        <stop
          offset="36.328%"
          stop-color="#CF2626"
        />
        <stop
          offset="36.719%"
          stop-color="#CF2727"
        />
        <stop
          offset="37.109%"
          stop-color="#D02727"
        />
        <stop
          offset="37.5%"
          stop-color="#D02828"
        />
        <stop
          offset="37.891%"
          stop-color="#D12828"
        />
        <stop
          offset="38.281%"
          stop-color="#D22929"
        />
        <stop
          offset="38.672%"
          stop-color="#D22929"
        />
        <stop
          offset="39.063%"
          stop-color="#D32929"
        />
        <stop
          offset="39.453%"
          stop-color="#D32A2A"
        />
        <stop
          offset="39.844%"
          stop-color="#D42A2A"
        />
        <stop
          offset="40.234%"
          stop-color="#D42B2B"
        />
        <stop
          offset="40.625%"
          stop-color="#D52B2B"
        />
        <stop
          offset="41.016%"
          stop-color="#D62C2C"
        />
        <stop
          offset="41.406%"
          stop-color="#D62C2C"
        />
        <stop
          offset="41.797%"
          stop-color="#D72C2C"
        />
        <stop
          offset="42.188%"
          stop-color="#D72D2D"
        />
        <stop
          offset="42.578%"
          stop-color="#D82D2D"
        />
        <stop
          offset="42.969%"
          stop-color="#D82E2E"
        />
        <stop
          offset="43.359%"
          stop-color="#D92E2E"
        />
        <stop
          offset="43.75%"
          stop-color="#D92F2F"
        />
        <stop
          offset="44.141%"
          stop-color="#DA2F2F"
        />
        <stop
          offset="44.531%"
          stop-color="#DB2F2F"
        />
        <stop
          offset="44.922%"
          stop-color="#DB3030"
        />
        <stop
          offset="45.313%"
          stop-color="#DC3030"
        />
        <stop
          offset="45.703%"
          stop-color="#DC3131"
        />
        <stop
          offset="46.094%"
          stop-color="#DD3131"
        />
        <stop
          offset="46.484%"
          stop-color="#DD3232"
        />
        <stop
          offset="46.875%"
          stop-color="#DE3232"
        />
        <stop
          offset="47.266%"
          stop-color="#DE3232"
        />
        <stop
          offset="47.656%"
          stop-color="#DF3333"
        />
        <stop
          offset="48.047%"
          stop-color="#E03333"
        />
        <stop
          offset="48.438%"
          stop-color="#E03434"
        />
        <stop
          offset="48.828%"
          stop-color="#E13434"
        />
        <stop
          offset="49.219%"
          stop-color="#E13434"
        />
        <stop
          offset="49.609%"
          stop-color="#E23535"
        />
        <stop
          offset="50%"
          stop-color="#E23535"
        />
        <stop
          offset="50.391%"
          stop-color="#E33636"
        />
        <stop
          offset="50.781%"
          stop-color="#E43636"
        />
        <stop
          offset="51.172%"
          stop-color="#E43737"
        />
        <stop
          offset="51.563%"
          stop-color="#E53737"
        />
        <stop
          offset="51.953%"
          stop-color="#E53737"
        />
        <stop
          offset="52.344%"
          stop-color="#E63838"
        />
        <stop
          offset="52.734%"
          stop-color="#E63838"
        />
        <stop
          offset="53.125%"
          stop-color="#E73939"
        />
        <stop
          offset="53.516%"
          stop-color="#E73939"
        />
        <stop
          offset="53.906%"
          stop-color="#E83A3A"
        />
        <stop
          offset="54.297%"
          stop-color="#E93A3A"
        />
        <stop
          offset="54.688%"
          stop-color="#E93A3A"
        />
        <stop
          offset="55.078%"
          stop-color="#EA3B3B"
        />
        <stop
          offset="55.469%"
          stop-color="#EA3B3B"
        />
        <stop
          offset="55.859%"
          stop-color="#EB3C3C"
        />
        <stop
          offset="56.25%"
          stop-color="#EB3C3C"
        />
        <stop
          offset="56.641%"
          stop-color="#EC3D3D"
        />
        <stop
          offset="57.031%"
          stop-color="#EC3D3D"
        />
        <stop
          offset="57.422%"
          stop-color="#ED3D3D"
        />
        <stop
          offset="57.813%"
          stop-color="#EE3E3E"
        />
        <stop
          offset="58.203%"
          stop-color="#EE3E3E"
        />
        <stop
          offset="58.594%"
          stop-color="#EF3F3F"
        />
        <stop
          offset="58.984%"
          stop-color="#EF3F3F"
        />
        <stop
          offset="59.375%"
          stop-color="#F03F3F"
        />
        <stop
          offset="59.766%"
          stop-color="#F04040"
        />
        <stop
          offset="60.156%"
          stop-color="#F14040"
        />
        <stop
          offset="60.547%"
          stop-color="#F14141"
        />
        <stop
          offset="60.938%"
          stop-color="#F24141"
        />
        <stop
          offset="61.328%"
          stop-color="#F34242"
        />
        <stop
          offset="61.719%"
          stop-color="#F34242"
        />
        <stop
          offset="62.109%"
          stop-color="#F44242"
        />
        <stop
          offset="62.5%"
          stop-color="#F44343"
        />
        <stop
          offset="62.891%"
          stop-color="#F54343"
        />
        <stop
          offset="63.281%"
          stop-color="#F54444"
        />
        <stop
          offset="63.672%"
          stop-color="#F64444"
        />
        <stop
          offset="64.063%"
          stop-color="#F74545"
        />
        <stop
          offset="64.453%"
          stop-color="#F74545"
        />
        <stop
          offset="64.844%"
          stop-color="#F84545"
        />
        <stop
          offset="65.234%"
          stop-color="#F84646"
        />
        <stop
          offset="65.625%"
          stop-color="#F94646"
        />
        <stop
          offset="66.016%"
          stop-color="#F94747"
        />
        <stop
          offset="66.406%"
          stop-color="#FA4747"
        />
        <stop
          offset="66.797%"
          stop-color="#FA4848"
        />
        <stop
          offset="67.188%"
          stop-color="#FB4848"
        />
        <stop
          offset="67.578%"
          stop-color="#FC4848"
        />
        <stop
          offset="67.969%"
          stop-color="#FC4949"
        />
        <stop
          offset="68.359%"
          stop-color="#FD4949"
        />
        <stop
          offset="68.75%"
          stop-color="#FD4A4A"
        />
        <stop
          offset="69.141%"
          stop-color="#FE4A4A"
        />
        <stop
          offset="69.531%"
          stop-color="#FE4B4B"
        />
        <stop
          offset="70.313%"
          stop-color="#FF4B4B"
        />
        <stop
          offset="71.875%"
          stop-color="#FF4B4B"
        />
        <stop
          offset="75%"
          stop-color="#FF4B4B"
        />
        <stop
          offset="100%"
          stop-color="#FF4B4B"
        />
      </lineargradient>
    </defs>
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <mask
        fill="#fff"
        id="b"
      >
        <use
          xlink:href="#a"
        />
      </mask>
      <g
        mask="url(#b)"
      >
        <mask
          fill="#fff"
          id="e"
        >
          <use
            xlink:href="#c"
          />
        </mask>
        <path
          d="M67.203 0H.711v79.8h66.492z"
          fill="url(#d)"
          fill-rule="nonzero"
          mask="url(#e)"
        />
      </g>
      <g
        transform="translate(27 5)"
      >
        <mask
          fill="#fff"
          id="g"
        >
          <use
            xlink:href="#f"
          />
        </mask>
        <g
          mask="url(#g)"
        >
          <mask
            fill="#fff"
            id="j"
          >
            <use
              xlink:href="#h"
            />
          </mask>
          <path
            d="M53.512.27H.477v69.265h53.035z"
            fill="url(#i)"
            fill-rule="nonzero"
            mask="url(#j)"
          />
        </g>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Logos <PortisLogo> matches snapshot 1`] = `
<DocumentFragment>
  <svg
    class="block w-auto h-[36px]"
    viewBox="0 0 301.38 455.87"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m4.45 262.11 10.93-4.75 135.31-58.82 146.24 63.57-54.95 113.43-134.33 19-101-109z"
      fill="#133444"
    />
    <path
      d="m266.51 192.16a150.43 150.43 0 0 0 -95.82-53q-1.2-.17-2.4-.3a152.36 152.36 0 0 0 -35.2 0q-1.2.14-2.4.3a150.43 150.43 0 0 0 -95.82 53l-6.08 10.08-10.13 16.76-7.41 12.31c-.14.33-.28.67-.41 1l-.09.23 16.35 9.67 103.6 61.28 20 11.83v-146.47l-20 9.08v-21.93l20-9.09 20 9.09 101.9 46.28z"
      fill="#c42370"
    />
    <path
      d="m301.38 298.56c0 48.78-23.18 94.42-59.12 123.84a149.45 149.45 0 0 1 -47.64 26.37 139.51 139.51 0 0 1 -43.93 7.1c-83.22 0-150.69-74.09-150.69-157.31a150.49 150.49 0 0 1 4.45-36.45l146.24 86.51 146.24-86.51a150.49 150.49 0 0 1 4.45 36.45z"
      fill="#1c4d6b"
    />
    <path
      d="m133.09 138.89 17.6 7.99-20 9.09v-18.17z"
    />
    <path
      d="m130.69 177.93 20-9.08v146.53l-20-11.83z"
    />
    <path
      d="m150.69 168.85v146.53l140.13-82.89z"
      fill="#1d4259"
    />
    <path
      d="m150.69 0v168.85l140.13 63.64z"
      fill="#4b6b9a"
    />
    <path
      d="m150.69 168.85v146.53l-20-11.83-119.95-71-.18-.11.27-.12c.13-.33.27-.67.41-1l17.53-29.09 101.92-46.23v22z"
      fill="#343535"
    />
    <path
      d="m150.69 168.85v146.53l-20-11.83-119.95-70.95-.18-.11.27-.12 119.86-54.44z"
      fill="#3e5578"
    />
    <path
      d="m150.69 0v168.85l-140.13 63.64z"
      fill="#6db2d8"
    />
    <g
      fill="#335f8a"
    >
      <path
        d="m94 443.85c2.09.92 4.21 1.79 6.34 2.61q-3.26-1.23-6.34-2.61z"
      />
      <path
        d="m100.29 446.46c2.14.82 4.29 1.59 6.47 2.31q-3.27-1.07-6.47-2.31z"
      />
      <path
        d="m112.33 450.49c1.66.47 3.33.92 5 1.33q-2.51-.62-5-1.33z"
      />
    </g>
    <path
      d="m4.45 262.11 146.24 86.51a167.48 167.48 0 0 1 -10.47 38.38c-11.7 28.28-35.34 58.19-81.08 35.44-35.96-29.44-59.14-75.1-59.14-123.88a150.49 150.49 0 0 1 4.45-36.45z"
      fill="#6db2d8"
    />
    <path
      d="m242.24 422.41-.36.29c-.76.62-1.52 1.23-2.29 1.83l-.2.16q-1.25 1-2.52 1.92c-.91.68-1.83 1.36-2.76 2s-1.86 1.31-2.8 1.95-1.66 1.12-2.49 1.66l-.46.3c-.88.57-1.76 1.13-2.64 1.67a2.63 2.63 0 0 1 -.33.2c-.91.57-1.82 1.12-2.74 1.65s-2 1.15-3 1.7-2 1.08-3 1.6l-.11.06c-1 .52-2 1-3 1.52s-2 1-3.08 1.49-2.08 1-3.12 1.42c-2.09.92-4.21 1.79-6.34 2.61s-4.29 1.59-6.47 2.31c-.87.29-1.74.57-2.62.84s-2 .6-2.95.88c-1.66.47-3.33.92-5 1.33-.63.16-1.27.31-1.91.45l-1.07.25c-.89.2-1.78.39-2.68.57s-1.64.33-2.47.48-1.51.28-2.27.4-1.68.27-2.52.39c-.41.07-.82.13-1.24.18l-1.89.25-1.05.13c-.69.09-1.39.16-2.09.23-.86.09-1.71.17-2.57.24-.67.05-1.34.11-2 .15s-1.16.08-1.75.1h-.08c-.68 0-1.36.08-2 .1-.94 0-1.89.07-2.84.09s-1.9 0-2.86 0-1.91 0-2.86 0-1.9 0-2.84-.09c-.69 0-1.37-.06-2.05-.1h-.08c-.59 0-1.17-.06-1.75-.1s-1.34-.1-2-.15c-.86-.07-1.71-.15-2.57-.24-.7-.07-1.4-.14-2.09-.23l-1-.13c-.63-.07-1.26-.16-1.89-.25-.42 0-.83-.11-1.24-.18q-1.27-.18-2.52-.39c-.76-.12-1.52-.26-2.27-.4s-1.65-.31-2.47-.48-1.79-.37-2.68-.57l-1.07-.25c-.64-.14-1.28-.29-1.91-.45-1.68-.41-3.35-.86-5-1.33l-3-.88c-.88-.27-1.75-.55-2.62-.84-2.18-.72-4.33-1.49-6.47-2.31s-4.29-1.67-6.29-2.59c-1-.46-2.08-.94-3.12-1.42s-2.06-1-3.08-1.49-2-1-3-1.52l-.11-.06c-1-.52-2-1.06-3-1.6s-2-1.12-3-1.7-1.79-1.06-2.69-1.65l-.33-.2c-.88-.54-1.76-1.1-2.64-1.67l-.46-.3c-.83-.54-1.67-1.1-2.49-1.66s-1.88-1.29-2.8-1.95-1.85-1.34-2.76-2-1.69-1.27-2.52-1.92l-.2-.16c-.77-.6-1.53-1.21-2.29-1.83l-.36-.29c45.74 22.75 69.38-7.16 81.08-35.44a167.48 167.48 0 0 0 10.47-38.35 167.47 167.47 0 0 0 10.46 38.36c11.7 28.25 35.34 58.16 81.08 35.41z"
      fill="#529bba"
    />
    <path
      d="m184 451.82c1.68-.41 3.35-.86 5-1.33q-2.44.72-5 1.33z"
      fill="#335f8a"
    />
    <path
      d="m194.62 448.77c2.18-.72 4.33-1.49 6.47-2.31q-3.19 1.24-6.47 2.31z"
      fill="#335f8a"
    />
    <path
      d="m201.09 446.46c2.13-.82 4.25-1.69 6.34-2.61q-3.13 1.38-6.34 2.61z"
      fill="#335f8a"
    />
    <path
      d="m301.38 298.56c0 48.78-23.19 94.43-59.14 123.85-45.74 22.75-69.38-7.16-81.08-35.44a167.47 167.47 0 0 1 -10.47-38.35l146.24-86.51a150.49 150.49 0 0 1 4.45 36.45z"
      fill="#4b6b9a"
    />
  </svg>
</DocumentFragment>
`;

exports[`Logos <WalletConnectLogo> matches snapshot 1`] = `
<DocumentFragment>
  <svg
    class="block w-[36px] h-[36px]"
    version="1.1"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <radialgradient
        cx="0%"
        cy="50%"
        fx="0%"
        fy="50%"
        id="radialGradient-1"
        r="100%"
      >
        <stop
          offset="0%"
          stop-color="#5D9DF6"
        />
        <stop
          offset="100%"
          stop-color="#006FFF"
        />
      </radialgradient>
    </defs>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Page-1"
      stroke="none"
      stroke-width="1"
    >
      <g
        id="logo"
      >
        <rect
          fill="url(#radialGradient-1)"
          height="512"
          id="base"
          rx="256"
          width="512"
          x="0"
          y="0"
        />
        <path
          d="M169.209772,184.531136 C217.142772,137.600733 294.857519,137.600733 342.790517,184.531136 L348.559331,190.179285 C350.955981,192.525805 350.955981,196.330266 348.559331,198.676787 L328.82537,217.99798 C327.627045,219.171241 325.684176,219.171241 324.485851,217.99798 L316.547278,210.225455 C283.10802,177.485633 228.89227,177.485633 195.453011,210.225455 L186.951456,218.549188 C185.75313,219.722448 183.810261,219.722448 182.611937,218.549188 L162.877976,199.227995 C160.481326,196.881474 160.481326,193.077013 162.877976,190.730493 L169.209772,184.531136 Z M383.602212,224.489406 L401.165475,241.685365 C403.562113,244.031874 403.562127,247.836312 401.165506,250.182837 L321.971538,327.721548 C319.574905,330.068086 315.689168,330.068112 313.292501,327.721609 C313.292491,327.721599 313.29248,327.721588 313.29247,327.721578 L257.08541,272.690097 C256.486248,272.103467 255.514813,272.103467 254.915651,272.690097 C254.915647,272.690101 254.915644,272.690105 254.91564,272.690108 L198.709777,327.721548 C196.313151,330.068092 192.427413,330.068131 190.030739,327.721634 C190.030725,327.72162 190.03071,327.721606 190.030695,327.721591 L110.834524,250.181849 C108.437875,247.835329 108.437875,244.030868 110.834524,241.684348 L128.397819,224.488418 C130.794468,222.141898 134.680206,222.141898 137.076856,224.488418 L193.284734,279.520668 C193.883897,280.107298 194.85533,280.107298 195.454493,279.520668 C195.454502,279.520659 195.45451,279.520651 195.454519,279.520644 L251.65958,224.488418 C254.056175,222.141844 257.941913,222.141756 260.338618,224.488222 C260.338651,224.488255 260.338684,224.488288 260.338717,224.488321 L316.546521,279.520644 C317.145683,280.107273 318.117118,280.107273 318.71628,279.520644 L374.923175,224.489406 C377.319825,222.142885 381.205562,222.142885 383.602212,224.489406 Z"
          fill="#FFFFFF"
          fill-rule="nonzero"
          id="WalletConnect"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;
